# autogold

./: BUILD.bazel  README.md  WORKSPACE  deps.bzl
example/: BUILD.bazel
internal/test/: BUILD.bazel
