load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

# gazelle:prefix github.com/hexops/autogold/v2
# gazelle:build_file_name BUILD.bazel

go_library(
    name = "autogold",
    srcs = [
        "autogold.go",
        "diff.go",
        "expect.go",
        "options.go",
    ],
    importpath = "github.com/hexops/autogold/v2",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_fatih_color//:color",
        "@com_github_hexops_gotextdiff//:gotextdiff",
        "@com_github_hexops_gotextdiff//myers",
        "@com_github_hexops_gotextdiff//span",
        "@com_github_hexops_valast//:valast",
        "@com_github_nightlyone_lockfile//:lockfile",
        "@org_golang_x_tools//go/ast/astutil",
        "@org_golang_x_tools//go/packages",
        "@org_golang_x_tools//imports",
    ],
)

go_test(
    name = "autogold_test",
    srcs = [
        "expect_test.go",
        "parallel_test.go",
    ],
    data = glob(["testdata/**"]),
    embed = [":autogold"],
)

go_test(
    name = "lib_test",
    srcs = [
        "expect_test.go",
        "parallel_test.go",
    ],
    data = glob(["testdata/**"]),
    embed = [":autogold"],
)

load("@bazel_gazelle//:def.bzl", "gazelle")

gazelle(
    name = "gazelle-update-repos",
    args = [
        "-from_file=go.mod",
        "-to_macro=deps.bzl%go_dependencies",
        "-prune",
        "-build_file_proto_mode=disable_global",
    ],
    command = "update-repos",
)

gazelle(
    name = "gazelle",
)
